--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+axum = "0.7.9"
 serde = "1.0.216"
 serde_json = "1.0.133"
+tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
